# litbridge-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  Dockerfile  README.md  SEARCH_HISTORY_API_UPDATE.md  Untitled  api-spec.json  docker-compose.yml  pyproject.toml
.cursor/rules/: ai-langgraph.mdc  api-contract.mdc  background-enrichment.mdc  database.mdc  deduplication.mdc  docker-deployment.mdc  documentation.mdc  external-apis.mdc  fastapi-patterns.mdc  federated-search.mdc  http-caching.mdc  oa-resolver.mdc  prisma.mdc  project-overview.mdc  python-backend.mdc  python-environment.mdc  security.mdc  (+5 more)
alembic/: env.py  script.py.mako
models/: .gitkeep
scripts/: benchmark_vs_pubmed.py  export_medcpt_onnx.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_adapters.py  test_auth_bridge.py  test_chat_service.py  test_database.py  test_dedup_service.py  test_dedup_service_v3.py  test_enrichment_api.py  test_enrichment_service.py  test_enrichment_streaming.py  test_fetcher_service.py  test_frontend_contract_snapshots.py  test_health.py  test_mesh_resolver.py  test_oa_service.py  test_prisma_api.py  test_prisma_service.py  test_query_preview.py  test_query_rewriter.py  test_query_types.py  test_record_resolver.py  test_repositories.py  test_schemas.py  test_scienthesis_integration.py  test_scienthesis_phase2.py  test_search_api.py  test_search_history_api.py  test_search_modes.py  test_search_service_rrf_integration.py  test_shared_library_collection.py  test_source_toggles.py  test_streaming.py  test_study_design_classifier.py
(+118 files in other folders)
