[project]
name = "litbridge-backend"
version = "0.1.0"
description = "LitBridge backend API."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis[hiredis]",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "rapidfuzz",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "respx",
    "factory-boy",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
